RESOLVED FIXED270559
[WebGPU] createView on a rgba16float canvas may crash
https://bugs.webkit.org/show_bug.cgi?id=270559
Summary [WebGPU] createView on a rgba16float canvas may crash
Mike Wyrzykowski
Reported 2024-03-05 21:15:55 PST
[WebGPU] createView on a rgba16float canvas may crash
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-05 21:16:07 PST
Mike Wyrzykowski
Comment 2 2024-03-05 21:20:27 PST
EWS
Comment 3 2024-03-06 08:31:56 PST
Committed 275740@main (53ebed3cf56a): <https://commits.webkit.org/275740@main> Reviewed commits have been landed. Closing PR #25522 and removing active labels.
Mike Wyrzykowski
Comment 4 2024-03-07 11:48:22 PST
EWS
Comment 5 2024-03-07 12:59:23 PST
Committed 275803@main (dc5a9185627c): <https://commits.webkit.org/275803@main> Reviewed commits have been landed. Closing PR #25592 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.