[WebGPU] createView on a rgba16float canvas may crash https://bugs.webkit.org/show_bug.cgi?id=270559 <rdar://problem/124117002>

Reviewed by Alex Christensen.

We were setting the pixel format to bgra8unorm but leaving
the WGPU texture format as rgba16float.

That is incorrect.

Additionally add validation around createView in a few additional
places.

* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::textureViewFormatCompatible):
(WebGPU::Device::errorValidatingTextureCreation):
(WebGPU::Texture::createView):
(WebGPU::textureViewFormatCompatible): Deleted.

Canonical link: https://commits.webkit.org/275740@main